--- a/styles/postLists.module.scss
+++ b/styles/postLists.module.scss
@@ -26,3 +26,20 @@
   justify-content: center;
   margin-top: 0.5em;
 }
+
+.outputList {
+  width: 80%;
+  margin: auto;
+  margin-top: 6em;
+}
+
+.outputItem {
+  text-align: center;
+  margin-top: 1.5em;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 0.5em;
+}
